# untitledpythonproject

./: .gitchangelog.rc  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  cookiecutter.json  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-release.txt  requirements-test.txt  requirements-types.txt  requirements.txt  tox.ini
.github/workflows/: continuous_integration.yml
docs/source/: conf.py  index.rst
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
scripts/: export_requirements.sh  release.sh
source/untitledpythonproject/: __init__.py
source/untitledpythonproject/computation/: __init__.py
source/untitledpythonproject/config/: __init__.py  constants.py
source/untitledpythonproject/integrations/: __init__.py
source/untitledpythonproject/interface/: __init__.py
source/untitledpythonproject/logs/: __init__.py
source/untitledpythonproject/utilities/: __init__.py
{{ cookiecutter.__project_name_dashed }}/: .gitchangelog.rc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
{{ cookiecutter.__project_name_dashed }}/.github/workflows/: continuous_integration.yml  todo_to_issue.yml
{{ cookiecutter.__project_name_dashed }}/docs/source/: conf.py  index.rst
{{ cookiecutter.__project_name_dashed }}/scripts/: export_requirements.sh  release.sh
{{ cookiecutter.__project_name_dashed }}/source/{{ cookiecutter.__project_name_underscored }}/: __init__.py  main.py
{{ cookiecutter.__project_name_dashed }}/source/{{ cookiecutter.__project_name_underscored }}/computation/: __init__.py
{{ cookiecutter.__project_name_dashed }}/source/{{ cookiecutter.__project_name_underscored }}/config/: __init__.py  constants.py
{{ cookiecutter.__project_name_dashed }}/source/{{ cookiecutter.__project_name_underscored }}/integrations/: __init__.py
{{ cookiecutter.__project_name_dashed }}/source/{{ cookiecutter.__project_name_underscored }}/interface/: __init__.py  command_line.py
{{ cookiecutter.__project_name_dashed }}/source/{{ cookiecutter.__project_name_underscored }}/logs/: __init__.py
{{ cookiecutter.__project_name_dashed }}/source/{{ cookiecutter.__project_name_underscored }}/utilities/: __init__.py
{{ cookiecutter.__project_name_dashed }}/tests/: __init__.py
